align fix

--- a/app/style/Layout.less
+++ b/app/style/Layout.less
@@ -335,10 +335,6 @@
 }
 
 @media screen and (max-width: 768px) {
-  .tabbed-page .tab-content {
-    padding: 20px 10px;
-  }
-
   .page-body {
     flex-direction: column-reverse;
   }
@@ -350,9 +346,7 @@
   .page-view-reduced-bar {
     width: 100%;
   }
-}
 
-@media screen and (max-width: 375px) {
   .tabbed-page-body{
     top: 133px;
   }
